--- a/_config.yml
+++ b/_config.yml
@@ -129,7 +129,7 @@ seo: true
 index_with_subtitle: true
 
 # Automatically add external URL with BASE64 encrypt & decrypt.
-exturl: true
+exturl: false
 
 
 # ---------------------------------------------------------------
@@ -549,8 +549,8 @@ changyan:
 # more info please open https://valine.js.org
 valine:
   enable: false # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
-  appid:  # your leancloud application appid
-  appkey:  # your leancloud application appkey
+  appid: KhWe30Xg8cpacBr4IQaJDTYx-gzGzoHsz # your leancloud application appid
+  appkey: yzP5BIrDHS2xnlsm0EVFSzcX # your leancloud application appkey
   notify: false # mail notifier , https://github.com/xCss/Valine/wiki
   verify: false # Verification code
   placeholder: Just go go # comment box placeholder
@@ -697,8 +697,8 @@ rating:
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
   enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  app_id: KhWe30Xg8cpacBr4IQaJDTYx-gzGzoHsz #<app_id>
+  app_key: yzP5BIrDHS2xnlsm0EVFSzcX #<app_key>
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in lc counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set the `security` to `false`.
